<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Janasahti</string>
    <string name="general_error">Virhe: </string>
    <string name="username_hint">Käyttäjänimi…</string>
    <string name="start_game">Aloita</string>
    <string name="best_players">Parhaat pelaajat\n%1$s</string>
    <string name="settings_menu">Asetukset</string>
    <string name="settings_amoled">OLED-suoja</string>
    <string name="settings_colormode">Tumma Teema</string>
    <string name="settings_textSize">Kirjainkoko</string>
    <string name="settings_scoreboard">Näytä pistetilastot</string>
    <string name="settings_return">Palaa</string>
    <string name="error_version">Versiotiedon haku epäonnistui</string>
    <string name="error_scoreboard">Pistetilastojen haku epäonnistui</string>
    <string name="new_version_header">Päivitys saatavilla</string>
    <string name="new_version_info">Sovelluksen käytettävyys on läpikäynyt kehitystä.\n\nUuden version voi ladata alla olevasta linkistä (etsi oikea versio ja lataa .apk-päätteinen tiedosto):</string>
    <string name="new_version_number">Nykyinen versio: %1$s | Uusi versio: %2$s</string>
    <string name="new_version_link">https://github.com/Polystyreeni/Janasahti/releases</string>
    <string name="new_version_required"><![CDATA[Tämä päivitys on <b>PAKOLLINEN</b>]]></string>
    <string name="new_version_block_action">Peli on päivitettävä!</string>
    <string name="scoreboard_info"><![CDATA[
    <b>%1$s</b><br><b>%2$d</b> pistettä, %3$.2f %4$s<br>Pisin löydetty sana: <i>%5$s</i>
    ]]></string>
    <string name="scoreboard_info_rational"><![CDATA[
    <b>%1$s</b><br><b>%2$d</b> sanaa, %3$.2f %4$s<br>Pisin löydetty sana: <i>%5$s</i>
    ]]></string>
    <string name="wordlist_word_len">%1$d kirjainta</string>
    <string name="gameboard_timer">%1$d:%2$02d</string>
    <string name="gameboard_current_score">%1$d / %2$d</string>
    <string name="gameboard_found_word"><![CDATA[<b>%1$d</b> %2$s]]></string>
    <string name="user_stats_score_total">Pisteitä yhteensä:</string>
    <string name="user_stats_games_played">Pelattuja pelejä:</string>
    <string name="user_stats_game_time">Peliaika yhteensä:</string>
    <string name="user_stats_highest_score">Paras pistemäärä:</string>
    <string name="user_stats_first_places">&#128081;-lukumäärä:</string>
    <string name="user_stats_highest_percentage">Paras löytöprosentti:</string>
    <string name="user_stats_longest_word">Pisin sana:</string>
    <string name="user_stats_percentage">%1$s %2$s</string>
    <string name="user_stats_avg_score">Keskiarvo per peli:</string>
    <string name="user_stats_score_total_rat">Löydettyjä sanoja yhteensä:</string>
    <string name="user_stats_highest_score_rat">Eniten löydettyjä sanoja:</string>
    <string name="definition_search_button">Hae määritelmä</string>
    <string name="timer_scoreboard">Pistetilastoihin: %1$d</string>
    <string name="timer_next_round">Seuraava kierros: %1$d</string>
    <string name="motd_header">Ilmoitusasiaa</string>
    <string name="motd_confirm">Okei</string>
    <string name="gamemode_header">Pelimuoto</string>
    <string name="support_button">Ota yhteyttä</string>
    <string name="support_select_type">Valitse viestin tyyppi alla olevasta listasta</string>
    <string name="support_write_area">Kirjoita tähän…</string>
    <string name="button_send">Lähetä</string>
    <string name="support_email_via">Lähetä käyttäen:</string>
    <string name="player_banned_text">Tämä tili on estetty.\n\nEston syy: %1$s\nEsto luotu: %2$s</string>
    <string name="player_banned_not_available">Tämä ominaisuus ei ole käytössä estetylle tilille!</string>
    <string name="load_status_board">Haetaan pelilautoja…</string>
    <string name="load_status_version">Haetaan versiotietoja…</string>
    <string name="load_status_message">Haetaan viestejä…</string>
    <string name="load_status_ban">Tarkastetaan estolistaa…</string>
</resources>