<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_support"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/supportHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_button"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/supportTypeHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_select_type"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_below="@id/supportHeader" />

    <Spinner
        android:id="@+id/supportTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        android:minHeight="30dp"
        android:prompt="@string/gamemode_header"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:background="@color/pico_void"
        android:layout_below="@id/supportTypeHint" />

    <ScrollView
        android:id="@+id/supportTextScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/supportTypeSpinner"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/rounder_corner">

        <EditText
            android:id="@+id/supportEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/support_write_area"
            android:paddingHorizontal="2dp"
            android:minLines="2"
            android:textColor="@color/black"
            android:background="@null"
            />
    </ScrollView>

    <Button
        android:id="@+id/sendSupportMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:layout_below="@id/supportTextScrollView"
        android:layout_marginTop="-70dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/button_send" />
</RelativeLayout>