<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background_gradient"
    android:paddingHorizontal="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/userStatsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="Käyttäjänimi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userStatsScoreTotalHeader"
            android:text="@string/user_stats_score_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userStatsScoreTotal"
            android:text="100"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userStatsGamesPlayedHeader"
            android:text="@string/user_stats_games_played"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userStatsGamesPlayed"
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userStatsGameTimeHeader"
            android:text="@string/user_stats_game_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userStatsGameTime"
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userStatsHighestScoreHeader"
            android:text="@string/user_stats_highest_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userStatsHighestScore"
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userStatsHighestPercentageHeader"
            android:text="@string/user_stats_highest_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userStatsHighestPercentage"
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userStatsLongestWordHeader"
            android:text="@string/user_stats_longest_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userStatsLongestWord"
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userStatsFirstPlacesHeader"
            android:text="@string/user_stats_first_places"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userStatsFirstPlaces"
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/userStatsReturnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginVertical="16dp"
        android:text="@string/settings_return" />

</LinearLayout>