<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:id="@+id/menuLayout"
    tools:context=".MenuActivity">

    <View
        android:id="@+id/mainMenuBackView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rounded_corner_gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="383dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:shadowColor = "#000"
        android:shadowDx = "1"
        android:shadowDy = "2"
        android:shadowRadius = "10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="159dp"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <ProgressBar
        android:id="@+id/boardLoadProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameButton" />

    <Button
        android:id="@+id/settingsButton"
        android:background="@drawable/wordgame_settings"
        android:tint="@color/white"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuBackView" />

    <Button
        android:id="@+id/userStatsButton"
        android:background="@drawable/wordgame_user_icon"
        android:backgroundTint="@color/white"
        android:tint="@color/white"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuBackView" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="57dp"
        android:layout_height="0dp"
        android:layout_marginEnd="34dp"
        android:text="X.X.X"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>